Fix(Added backface visibility for safari, removed extra A in about section, lessen shadows on cards

--- a/css/style.css
+++ b/css/style.css
@@ -253,9 +253,10 @@ body {
     top: 0;
     left: 0;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
     overflow: hidden;
     border-radius: 5px;
-    box-shadow: 0 0.5rem 4rem rgba(0, 0, 0, 0.8); }
+    box-shadow: 0 0.2rem 1rem rgba(0, 0, 0, 0.8); }
     .card__side--front {
       background-color: #ffffff; }
     .card__side--back {
